# genotype-qc-harmonization-utils

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  genotype_qc_harmonization_demo.py  pyproject.toml
docs/: qc_harmonization_logic.md
examples/input/: synthetic_genotype.tsv  synthetic_reference_panel.tsv
examples/output/: harmonization_readiness_report.html  harmonization_status.tsv  qc_summary.tsv  variant_status_table.tsv
scripts/: genotype_qc_harmonization_demo.py
tests/: README.md
