[project]
name = "genotype-qc-harmonization-utils"
version = "0.1.0"
description = "Synthetic-data demonstration of genotype QC and harmonization readiness reporting."
authors = [
  {name = "Mahdi Akbarzadeh"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
